Deploy merge version 000

--- a/app/views/bookmark-details.html
+++ b/app/views/bookmark-details.html
@@ -9,7 +9,7 @@
 <!-- *****************************************************************************************************************
  DETAIL
  ***************************************************************************************************************** -->
-
+ <div style="height: 500px;" *ngIf="!bookmark"></div>
  <div class="container mtb" *ngIf="bookmark" >
  	<div class="row">
 
