--- a/app/views/bookmarks.html
+++ b/app/views/bookmarks.html
@@ -8,11 +8,11 @@
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
-            <a class="navbar-brand" [routerLink]="['bookmarks']"><img style="float: left; display: inline-block; position:relative; margin-top: -7px;" src="img/bk.png" /></a>
+            <a class="navbar-brand" [routerLink]="['/']"><img style="float: left; display: inline-block; position:relative; margin-top: -7px;" src="img/bk.png" /></a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li><a [routerLink]="['bookmarks']">HOME</a></li>
+                <li><a [routerLink]="['/']">HOME</a></li>
                 <li><a>ABOUT</a></li>
             </ul>
         </div>
