--- a/app/views/bookmark-details.html
+++ b/app/views/bookmark-details.html
@@ -1,7 +1,7 @@
 <div id="blue">
     <div class="container">
         <div class="row">
-            <h3>{{title}}.</h3>
+            <h3>{{title}}</h3>
         </div>
     </div>
 </div>
