--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -13,23 +13,22 @@
 		 			<h4>Social Links</h4>
 		 			<div class="hline-w"></div>
 		 			<p>
-		 				<a href="#"><i class="fa fa-dribbble"></i></a>
-		 				<a href="https://www.facebook.com/iarield" target="_blank"><i class="fa fa-facebook"></i></a>
-		 				<a href="#"><i class="fa fa-twitter"></i></a>
-		 				<a href="#"><i class="fa fa-instagram"></i></a>
-		 				<a href="#"><i class="fa fa-tumblr"></i></a>
+		 				<a href="https://ar.linkedin.com/in/arielduarte" target="_blank"><i class="fa fa-linkedin"></i></a>
+		 				<a href="#"><i class="fa fa-facebook"></i></a>
+		 				<a href="#" target="_blank"><i class="fa fa-github"></i></a>
+
 		 			</p>
 		 		</div>
 		 		<div class="col-lg-4">
-		 			<h4>My Bunker</h4>
+		 			<h4>Powered By</h4>
 		 			<div class="hline-w"></div>
-		 			<p>
-		 				Don Bosco, 137,<br/>
-		 				3500, Resistencia,<br/>
-		 				Argentina.<br/>
-		 			</p>
+		 			<h4>
+		 				<a href="https://angular.io/docs/ts/latest/quickstart.html" target="_blank"><i class="fa fa-check-circle-o"></i> Angular 2</a><br/>
+		 				<a href="https://spring.io/guides/gs/spring-boot/" target="_blank"><i class="fa fa-check-circle-o"></i> Spring Boot</a><br/>
+		 				<a href="https://mlab.com/welcome/" target="_blank"><i class="fa fa-check-circle-o"></i> MongoDB mLab</a><br/>
+						<a href="https://www.heroku.com/" target="_blank"><i class="fa fa-check-circle-o"></i> Heroku</a>
+		 			</h4>
 		 		</div>
-
-		 	</div><! --/row -->
-	 	</div><! --/container -->
-	 </div><! --/footerwrap -->
+		 	</div>
+	 	</div>
+	 </div>
