--- a/app/views/bookmarks.html
+++ b/app/views/bookmarks.html
@@ -12,8 +12,8 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-                <li><a [routerLink]="['/']">HOME</a></li>
-                <li><a [routerLink]="['about']">ABOUT</a></li>
+                <li><a href [routerLink]="['/']">HOME</a></li>
+                <li><a href [routerLink]="['about']">ABOUT</a></li>
                 <li><img src="img/portfolio_01.jpg" class="img-circle" width="60"></li>
             </ul>
         </div>
