changed look and feel

--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -15,7 +15,7 @@
 		 			<p>
 		 				<a href="https://ar.linkedin.com/in/arielduarte" target="_blank"><i class="fa fa-linkedin"></i></a>
 		 				<a href="#"><i class="fa fa-facebook"></i></a>
-		 				<a href="#"><i class="fa fa-github"></i></a>
+		 				<a href="https://github.com/reyduar/bookmark-dev"><i class="fa fa-github"></i></a>
 
 		 			</p>
 		 		</div>
