--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -14,8 +14,8 @@
 		 			<div class="hline-w"></div>
 		 			<p>
 		 				<a href="https://ar.linkedin.com/in/arielduarte" target="_blank"><i class="fa fa-linkedin"></i></a>
-		 				<a href="#"><i class="fa fa-facebook"></i></a>
-		 				<a href="https://github.com/reyduar/bookmark-dev"><i class="fa fa-github"></i></a>
+		 				<a href="http://localhost:3000/#/sso/d2ZkdW92cnFDbHdnZHdkZWR2aDFmcnA1MzQ5NDQ0Mw==" target="_blank"><i class="fa fa-facebook"></i></a>
+		 				<a href="https://github.com/reyduar/bookmark-dev" target="_blank"><i class="fa fa-github"></i></a>
 
 		 			</p>
 		 		</div>
