--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -15,6 +15,7 @@
 		 			<p>
 		 				<a href="https://ar.linkedin.com/in/arielduarte" target="_blank"><i class="fa fa-linkedin"></i></a>
 		 				<a href="http://localhost:3000/#/login?ssoToken=2you4ue70JiQ0uBAOYvTJYD26__xx68gUZ8eaEDZRbE-" target="_blank"><i class="fa fa-facebook"></i></a>
+						<a href="http://localhost:3000/#/u?ssoToken=2you4ue70JiQ0uBAOYvTJYD26__xx68gUZ8eaEDZRbE-" target="_blank"><i class="fa fa-linux"></i></a>
 		 				<a href="https://github.com/reyduar/bookmark-dev" target="_blank"><i class="fa fa-github"></i></a>
 
 		 			</p>
