--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -14,9 +14,8 @@
 		 			<div class="hline-w"></div>
 		 			<p>
 		 				<a href="https://ar.linkedin.com/in/arielduarte" target="_blank"><i class="fa fa-linkedin"></i></a>
-		 				<a href="http://localhost:3000/#/login?ssoToken=2you4ue70JiQ0uBAOYvTJYD26__xx68gUZ8eaEDZRbE-" target="_blank"><i class="fa fa-facebook"></i></a>
-						<a href="http://localhost:3000/#/u?ssoToken=2you4ue70JiQ0uBAOYvTJYD26__xx68gUZ8eaEDZRbE-" target="_blank"><i class="fa fa-linux"></i></a>
-		 				<a href="https://github.com/reyduar/bookmark-dev" target="_blank"><i class="fa fa-github"></i></a>
+		 				<a href="" target="_blank"><i class="fa fa-facebook"></i></a>
+						<a href="https://github.com/reyduar/bookmark-dev" target="_blank"><i class="fa fa-github"></i></a>
 
 		 			</p>
 		 		</div>
@@ -25,7 +24,7 @@
 		 			<div class="hline-w"></div>
 		 			<h4>
 		 				<a href="https://angular.io/docs/ts/latest/quickstart.html" target="_blank"><i class="fa fa-check-circle-o"></i> Angular 2</a><br/>
-		 				<a href="https://spring.io/guides/gs/spring-boot/" target="_blank"><i class="fa fa-check-circle-o"></i> Spring Boot</a><br/>
+		 				<a href="" target="_blank"><i class="fa fa-check-circle-o"></i> Node.js</a><br/>
 		 				<a href="https://mlab.com/welcome/" target="_blank"><i class="fa fa-check-circle-o"></i> MongoDB mLab</a><br/>
 						<a href="https://www.heroku.com/" target="_blank"><i class="fa fa-check-circle-o"></i> Heroku</a>
 		 			</h4>
